Prevent long commands from making the blog overflow

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,5 +1,6 @@
 article.post {
     width: 100%;
+    word-break: break-word;
 
     &:not(:last-of-type) {
         padding-bottom: 1rem;
